<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="32dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velocity_friction"/>
    <SeekBar
        android:id="@+id/seekbar_vel_friction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_vel_friction_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_5"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_friction"
        android:paddingTop="12dip"/>
    <SeekBar
        android:id="@+id/seekbar_pos_friction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/txt_pos_friction_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0_5"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_pass_filter_alpha"
        android:paddingTop="12dip"/>
    <SeekBar
        android:id="@+id/seekbar_low_pass_alpha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/txt_low_pass_alpha_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0_5"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velocity_amplification"
        android:paddingTop="12dip"/>
    <SeekBar
        android:id="@+id/seekbar_velocity_ampl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/txt_velocity_ampl_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_10000"
        android:layout_marginBottom="12dp"/>
</LinearLayout>